get chats endpoint bug fixed